--- a/css/styles.css
+++ b/css/styles.css
@@ -28,29 +28,36 @@ body {
   height: 50px;
   border-radius: 50%;
 }
-.middle-section_content {
+.middle-section__content {
   padding: 3.5em 0.75em;
 }
-.content{
-    background-color: #D6D2C4;
-    width: 100%;
-    height: 32em;
+.content {
+  background-color: #fefbe9;
+  /* background-color: rgb(232, 240, 242, 0.55); */
+  opacity: 0.75;
+  width: 100%;
+  height: auto;
 }
-.content__wrapper{
-    max-width: 50%;
-    padding: 1em;
+.content__wrapper {
+  padding: 1em 0;
+}
+.welcome {
+  max-width: 80%;
+  line-height: 1.6;
 }
 .menu-bar {
   display: block;
   width: 100%;
   margin-top: 1em;
-  background-color: #A2DBFA;
+  background-color: #3c8dad;
   border-radius: 5px;
 }
+
 .menu-bar li {
   margin: 0.5em;
-  display: inline-block;git 
+  display: inline-block;
 }
+
 .page-wrapper {
   display: flex;
 }
@@ -58,22 +65,94 @@ body {
   width: 20%;
   padding: 1em;
   background-color: #053742;
-  /* border: 1px solid; */
   color: #fff;
   margin: 0;
 }
 .middle-section {
   width: 80%;
-  /* border: 1px solid red; */
 }
-
 .side-bar,
 .middle-section {
   height: 40em;
 }
 
+/**********************
+  SETTINGS
+ **********************/
+.settings-well {
+  display: flex;
+}
+.settings-well-menu {
+  width: 30%;
+  margin: 0.25em;
+}
+.settings-well-content {
+  width: 70%;
+  margin: 0.25em;
+  padding: 0;
+}
+.settings-well-menu {
+  padding: 1em 0.5em;
+  border-radius: 5px;
+  background-color: #dddddd;
+}
+.settings-well-content {
+  border-radius: 5px;
+  background-color: #dddddd;
+  border-radius: 4px;
+}
+.sub-settings-header {
+  background-color: #aaaaaa;
+  padding: 0.75em;
+  margin: 0;
+  width: 100%;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.sub-settings-content {
+  padding: 0.75em;
+}
+.sub-settings-content ul {
+  list-style-type: none;
+  padding: 0;
+}
+/**********************
+  PAYMENT DETAILS
+ **********************/
+.sub-settings-content {
+  max-width: 80%;
+}
+/**********************
+  OTHERS
+ **********************/
+.btn-settings {
+  margin: 0.35em 0;
+  width: 100%;
+  color: #fff;
+}
+.btn-submit,
+.btn-settings {
+  background-color: #aaaaaa;
+  padding: 0.75em;
+  border: 1px solid #aaaaaa;
+  border-radius: 4px;
+}
+.btn-submit {
+  width: 100%;
+}
 .btn-search {
   background-color: #e9ecef;
   border: 1px solid #ced4da;
-  /* border-radius:.25rem; */
+}
+.hide-div {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .content__wrapper {
+    height: 32em;
+  }
+  .settings-well-menu,
+  .settings-well-content {
+    height: 30em;
+  }
 }
