--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,16 @@
   box-sizing: border-box;
 }
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 body {
   font-family: "Lato", sans-serif;
+  background-color: #ffffff;
 }
 .sidenav {
   height: 100%;
@@ -21,7 +26,6 @@ body {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-  
 }
 .sidenav li {
   padding: 8px 8px 8px 32px;
@@ -49,30 +53,32 @@ body {
 .status-bar {
   display: block;
   width: 100%;
-  background-color: #053742;
+  background-color: #123c69;
   float: left;
   padding: 0.25em;
-  padding-top: 0em;
   color: #ffff;
 }
 .menu-bar {
   display: block;
   width: 100%;
-  margin-top: 1em;
-  background-color: #A2DBFA;
-  border-radius: 5px;
+  margin: 1em 0;
+  background-color: #bab2b5;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  /* border-radius: 4px; */
+  padding: 0.5em;
 }
-
 .middle-section_content {
   padding: 3.5em 0.75em;
 }
-.content{
-    background-color: #D6D2C4;
-    width: 100%;
-    height: 32em;
-    padding-top:3.5em 0.75em ;
-    border-radius: 5px;
-
+.content {
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 32em;
+  padding-top: 3.5em 0.75em;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding: 0.5em;
 }
 .content__wrapper {
   padding: 1em 0;
@@ -81,12 +87,134 @@ body {
   max-width: 80%;
   line-height: 1.6;
 }
-h6{
-    color: antiquewhite;
-    font-size: large;
+h6 {
+  color: antiquewhite;
+  font-size: large;
 }
 .btn-search {
   background-color: #e9ecef;
   border: 1px solid #ced4da;
-  border-radius:.55rem;
+  border-radius: 0.55rem;
+}
+.hide-div {
+  display: none;
+}
+/**********************
+  SETTINGS
+ **********************/
+.settings-well {
+  display: flex;
+}
+.settings-well-menu {
+  width: 30%;
+  margin: 0.25em;
+}
+.settings-well-content {
+  width: 70%;
+  margin: 0.25em;
+  padding: 0;
+}
+.settings-well-menu {
+  padding: 1em 0.5em;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  border: 1px solid #bab2b5;
+}
+.settings-well-content {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  border-radius: 4px;
+  border: 1px solid #bab2b5;
+}
+.sub-settings-header {
+  background-color: #bab2b5;
+  padding: 0.75em;
+  margin: 0;
+  width: 100%;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  color: #ac3b61;
+}
+.sub-settings-content {
+  padding: 0.75em;
+}
+.sub-settings-content ul {
+  list-style-type: none;
+  padding: 0;
+}
+/**********************
+    PAYMENT DETAILS
+**********************/
+.sub-settings-content {
+  max-width: 80%;
+}
+
+/**********************
+    DASHBOARD
+**********************/
+.dashboard{
+    display: block;
+}
+.dashboard-statistics{
+    display: flex;
+    padding-left: 5em;
+}
+.statistics{
+    width: 25%;
+    text-align: center;
+    border: 1px solid;
+    border-radius: 1em;
+    padding: 0.85em;
+    margin-left: 1em;
+}
+.statistics + .statistics{
+    margin-left: 2em;
+}
+.table-lists{
+    padding: 3em;
+}
+/**********************
+  NEW CHAMA
+ **********************/
+.new-chama{
+    display: block;
+    text-align: center;
+}
+.new-chama__container{
+    max-width: 60em;
+    /* background-color: yellowgreen; */
+}
+/**********************
+  OTHERS
+ **********************/
+.btn-settings {
+  margin: 0.35em 0;
+  width: 100%;
+  color: #fff;
+}
+.btn-submit,
+.btn-settings {
+  background-color: #bab2b5;
+  padding: 0.75em;
+  border: 1px solid #bab2b5;
+  border-radius: 4px;
+}
+.btn-submit {
+  width: 100%;
+}
+.btn-search {
+  background-color: #e9ecef;
+  border: 1px solid #ced4da;
+}
+.hide-div, .hide-link {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .content__wrapper {
+    height: 32em;
+  }
+  .settings-well-menu,
+  .settings-well-content {
+    height: 30em;
+  }
 }
