--- a/css/styles.css
+++ b/css/styles.css
@@ -45,10 +45,14 @@ body {
   font-size: 36px;
   margin-left: 50px;
 }
-.user-profile-pic img {
+.current-user {
+  /* display: block; */
+  float: right;
+}
+.current-user img {
   height: 50px;
   border-radius: 50%;
-  float: right;
+  /* float: right; */
 }
 .status-bar {
   display: block;
@@ -57,6 +61,7 @@ body {
   float: left;
   padding: 0.25em;
   color: #ffff;
+  border: 1px solid red;
 }
 .menu-bar {
   display: block;
@@ -191,6 +196,7 @@ h6 {
   background-image: url(../images/micheile-henderson-ZVprbBmT8QA-unsplash.jpg);
   background-position: center;
   background-size: cover;
+  width: 100%;
   height: 100%;
   /* margin-left: 0;
   width: 90vw;
@@ -200,6 +206,7 @@ h6 {
   align-items: center;
   flex-direction: column; */
   background-repeat: no-repeat;
+  padding-bottom: 10em;
 }
 
 .navbar {
@@ -275,14 +282,15 @@ h1 {
     height: 30em;
   }
 }
-input {
+input,
+select {
   opacity: 0.5;
   color: #fff;
 }
-#signup,
+/* #signup,
 #login {
   display: none;
-}
+} */
 
 .homepage {
   padding: 10%;
@@ -290,4 +298,7 @@ input {
 }
 h5 {
   color: #f11515;
+}
+.validate {
+  border: 1px solid red;
 }
